Add password hint pop-up

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <p class="message-phone"></p>
                     </div>
                     <div class="card">
-                        <label for="password">Password</label>
+                        <label class="pass-req" for="password">Password</label>
                         <input type="password" name="password" id="password"  class="input" pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" required placeholder=" ">
                         <p class="message"></p>
                         <p class="message-password-valid"></p>
